@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2008-11-12 Warren L. DeLano <warren@delsci.com>
+
+	* added max_ups setting to govern excessive geometry flux
+		
 2008-11-10 Warren L. DeLano <warren@delsci.com>
 
 	* further work on the builder
